--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -345,8 +345,6 @@
     "X = pd.get_dummies(df, columns=[\"home_ownership\",\"verification_status\", \"issue_d\", \"pymnt_plan\",\"initial_list_status\",\"next_pymnt_d\", \"application_type\",\"hardship_flag\", \"debt_settlement_flag\"])\n",
     "X = X.drop([\"loan_status\"], axis=1)\n",
     "\n",
-    "\n",
-    "\n",
     "# Create our target\n",
     "y = df[\"loan_status\"]"
    ]
@@ -673,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +682,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +703,7 @@
        "Counter({'low_risk': 51339, 'high_risk': 273})"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,41 +740,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Score: 0.9999806246609315\n",
-      "Testing Score: 0.9959895379250218\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Resample the training data with the BalancedRandomForestClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "clf = RandomForestClassifier(random_state=28, n_estimators=100).fit(X_train, y_train)\n",
-    "print(f'Training Score: {clf.score(X_train, y_train)}')\n",
-    "print(f'Testing Score: {clf.score(X_test, y_test)}')"
+    "clf = RandomForestClassifier(random_state=28, n_estimators=100).fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "\n",
     "y_pred = clf.predict(X_test)\n",
-    "acc_score = balanced_accuracy_score(y_test,y_pred)\n"
+    "acc_score = balanced_accuracy_score(y_test,y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,14 +776,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Oversampling Analysis\n",
+      "Balanced Random Forest Analysis\n",
       "Confusion Matrix\n"
      ]
     },
@@ -871,7 +857,7 @@
     "from imblearn.metrics import classification_report_imbalanced\n",
     "\n",
     "# Displaying results\n",
-    "print(\"Oversampling Analysis\")\n",
+    "print(\"Balanced Random Forest Analysis\")\n",
     "print(\"Confusion Matrix\")\n",
     "display(cm_df)\n",
     "print(f\"Accuracy Score : {acc_score}\")\n",
@@ -881,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +970,7 @@
        " (0.0, 'acc_now_delinq')]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,14 +1026,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Oversampling Analysis\n",
+      "Easy Ensemble AdaBoost Analysis\n",
       "Confusion Matrix\n"
      ]
     },
@@ -1119,7 +1105,7 @@
    "source": [
     "# Print the imbalanced classification report\n",
     "# Displaying results\n",
-    "print(\"Oversampling Analysis\")\n",
+    "print(\"Easy Ensemble AdaBoost Analysis\")\n",
     "print(\"Confusion Matrix\")\n",
     "display(cm_df)\n",
     "print(f\"Accuracy Score : {acc_score}\")\n",
@@ -1151,7 +1137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
